--- a/app/assets/javascripts/spa-demo/pages/main.html
+++ b/app/assets/javascripts/spa-demo/pages/main.html
@@ -1,5 +1,5 @@
 <div>
   <h2>Sample App</h2>
   <span>(from spa-demo/pages/main.html)</span>
-  <sd-foos></sd-foos>
+  <sd-cities></sd-cities>
 </div>
