--- a/app/assets/javascripts/spa-demo/pages/tags_page.html
+++ b/app/assets/javascripts/spa-demo/pages/tags_page.html
@@ -1,5 +1,5 @@
 <div class="tags-area">
-  <h1>Find things by category</h1>
+  <h1>Categories (tags)</h1>
   <sd-tag-form authz="vm.authz"></sd-tag-form>
   <sd-tag-list authz="vm.authz"></sd-tag-list>
 </div>
