--- a/app/assets/javascripts/spa-demo/pages/find_by_tag_page.html
+++ b/app/assets/javascripts/spa-demo/pages/find_by_tag_page.html
@@ -3,9 +3,9 @@
     <div class="areas-left"
          ng-hide="sideVM.isHidden('left')"
          ng-class="sideVM.isHidden('right') ? 'col-sm-12':'col-sm-6 col-md-5 col-lg-4'">
-      <sd-area label="Find Things by Category" position="left">
+      <sd-area label="Categories" position="left">
         <div class="categories">
-          <h2>Categories</h2>
+          <h2>Find by category</h2>
           <sd-current-tags></sd-current-tags>
         </div>
       </sd-area>
